--- a/package.json
+++ b/package.json
@@ -12,10 +12,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.2",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "mongoose": "^8.0.0",
-    "nodemon": "^3.0.1"
+    "mongoose": "^8.0.0"
   }
 }
